changes was done

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body >
    
     <header>
-        <h1>NET<span>FLİX</span></h1>
+        <br><h1>NET<span>FLİX</span></h1>
         <p>Thank you for signing up at Netflix. Tell us more about yourself</p>
-    </header>    
+    </header><br>    
             
     <div class="content">
          <form action="">
@@ -68,7 +68,7 @@
             <label for="Other">Other</label><br><br>
         </div>    
 
-        <div class="feedback">
+        <div class="box-cr">
             <label for="Feedback">Feedback</label><br>
             <textarea name="Feedback" id="Feedback" cols="40" rows="5" placeholder="Any comment"></textarea><br>
         </div>
